--- a/css/style.css
+++ b/css/style.css
@@ -943,19 +943,21 @@ body {
         font-size: 1rem;
         line-height: 1.3;
         margin-bottom: 0.2rem;
+        text-align: left;
     }
     
     .result-album {
         font-size: 0.875rem;
         margin-bottom: 0.5rem;
+        text-align: left;
     }
     
     .result-actions {
-        width: 100%;
-        margin-left: 0;
+        width: calc(100% - 40px - 60px - 1.5rem);
+        margin-left: calc(40px + 60px + 1.5rem);
         margin-top: 0.5rem;
-        padding-left: calc(40px + 60px + 1.5rem);
-        justify-content: flex-start;
+        padding: 0;
+        justify-content: center;
     }
     
     .result-actions .btn-small {
